# am_extruder_simple_ui

./: CMakeLists.txt  README.md  am_extruder_simpleUI_plugin.xml  am_extruder_simple_ui_plugin.xml  package.xml  setup.py
include/am_extruder_simpleUI/: simple_extruder_ui.hpp  ui_simple_extruder_ui.hpp
include/am_extruder_simple_ui/: simple_extruder_ui.hpp  ui_simple_extruder_ui.hpp
scripts/: am_extruder_simple_ui
src/: simpleUI.cpp  simple_extruder_ui.cpp  ui_simple_extruder_ui.cpp
