<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>am_extruder_simpleUI</name>
  <version>0.0.0</version>
  <description>Simple control panel for setting nozzle temperature target and filament speed target.</description>
  <maintainer email="andreas.h.moltumyr@ntnu.no">moltumyr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!--<depend>pluginlib</depend> -->
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
