<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>am_extruder_simple_ui</name>
  <version>0.0.0</version>
  <description>Simple control panel for setting nozzle temperature target and filament speed target.</description>
  <maintainer email="andreas.h.moltumyr@ntnu.no">moltumyr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/am_extruder_simple_ui_plugin.xml"/>
  </export>
</package>
